src/test/ui/parser/issue-62881.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-62881.rs:6:52
   |
LL | fn f() -> isize { fn f() -> isize {} pub f<
   |                 - unclosed delimiter
...
LL |
   |                                                    ^

error: aborting due to previous error

